; ModuleID = '/home/carl/AnghaBench/nanomsg/tests/extr_block.c_main.c'
source_filename = "/home/carl/AnghaBench/nanomsg/tests/extr_block.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nn_thread = type { i32 }

@AF_SP = common dso_local global i32 0, align 4
@NN_PAIR = common dso_local global i32 0, align 4
@sb = common dso_local global i32 0, align 4
@SOCKET_ADDRESS = common dso_local global i32 0, align 4
@sc = common dso_local global i32 0, align 4
@worker = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [4 x i8] c"ABC\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main() #0 {
  %1 = alloca i32, align 4
  %2 = alloca %struct.nn_thread, align 4
  store i32 0, i32* %1, align 4
  %3 = load i32, i32* @AF_SP, align 4
  %4 = load i32, i32* @NN_PAIR, align 4
  %5 = call i32 @test_socket(i32 %3, i32 %4)
  store i32 %5, i32* @sb, align 4
  %6 = load i32, i32* @sb, align 4
  %7 = load i32, i32* @SOCKET_ADDRESS, align 4
  %8 = call i32 @test_bind(i32 %6, i32 %7)
  %9 = load i32, i32* @AF_SP, align 4
  %10 = load i32, i32* @NN_PAIR, align 4
  %11 = call i32 @test_socket(i32 %9, i32 %10)
  store i32 %11, i32* @sc, align 4
  %12 = load i32, i32* @sc, align 4
  %13 = load i32, i32* @SOCKET_ADDRESS, align 4
  %14 = call i32 @test_connect(i32 %12, i32 %13)
  %15 = load i32, i32* @worker, align 4
  %16 = call i32 @nn_thread_init(%struct.nn_thread* %2, i32 %15, i32* null)
  %17 = load i32, i32* @sb, align 4
  %18 = call i32 @test_recv(i32 %17, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0))
  %19 = load i32, i32* @sb, align 4
  %20 = call i32 @test_recv(i32 %19, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0))
  %21 = call i32 @nn_thread_term(%struct.nn_thread* %2)
  %22 = load i32, i32* @sc, align 4
  %23 = call i32 @test_close(i32 %22)
  %24 = load i32, i32* @sb, align 4
  %25 = call i32 @test_close(i32 %24)
  ret i32 0
}

declare dso_local i32 @test_socket(i32, i32) #1

declare dso_local i32 @test_bind(i32, i32) #1

declare dso_local i32 @test_connect(i32, i32) #1

declare dso_local i32 @nn_thread_init(%struct.nn_thread*, i32, i32*) #1

declare dso_local i32 @test_recv(i32, i8*) #1

declare dso_local i32 @nn_thread_term(%struct.nn_thread*) #1

declare dso_local i32 @test_close(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
